DontExpiReBack/src/main/java/org/example/error/WrongPasswordException.java
package org.example.error;

public class WrongPasswordException extends RuntimeException {
    public WrongPasswordException(String message) {
        super(message);
    }
}
